# research-hub-skills

./: .gitignore  AGENTS.md  CODEX_TASK.md  README.md  install.sh  pyproject.toml
.codex/: config.toml
docs/: DEVELOPMENT.md  INSTALL.md  intake-dispatch.md  integrations.md  oss-reuse.md  oss-ui-shortlist.md  skill-map.md
docs/superpowers/plans/: 2026-04-30-research-hub-skill-map.md  2026-04-30-research-library-substrate.md  2026-05-01-distributed-research-control-plane.md  2026-05-01-lazy-workspace-intake-dispatch.md
docs/superpowers/specs/: 2026-04-30-research-hub-skill-map-design.md  2026-04-30-research-library-substrate-design.md  2026-05-01-intake-dispatch-oss-design.md
install/: manifest.json
profiles/dcase2026/: claim_boundaries.md
profiles/generic/: claim_boundaries.md
scripts/: bootstrap_shared_nas.sh  fetch_skills.sh  install_codex_skills.sh  install_user_timer.sh  install_workspace.sh
skills/research-discussion-synthesis/: SKILL.md
skills/research-documentation-patch/: SKILL.md
skills/research-hub-context/: SKILL.md
skills/research-hub-install/: SKILL.md
skills/research-literature-index/: SKILL.md
skills/research-workspace-index/: SKILL.md
skills/research-workspace-publish/: SKILL.md
src/research_hub/: __init__.py  cli.py  collector.py  context.py  dispatch.py  git_sync.py  inbox.py  indexer.py  intake.py  jsonl.py  panel.py  registry.py  transport.py  web.py
templates/: AGENTS.md  RESEARCH_HUB.md  START_HERE.md
tests/: __init__.py  test_collect_index.py  test_dcase_profile.py  test_lazy_workspace_loop.py  test_webui.py
(+4 files in other folders)
