[project]
name = "research-hub-skills"
version = "0.1.0"
description = "Index-first research workspace context layer for Codex and AI agents."
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = []

[project.scripts]
research-hub = "research_hub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
